--- a/DinJavaSymmetricCrypto/.project
+++ b/DinJavaSymmetricCrypto/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DinJavaSymmetricCrypto</name>
+	<name>DinJavaASymmetricCrypto</name>
 	<comment></comment>
 	<projects>
 	</projects>
